# fanorona-telo

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alpha_beta.py  alpha_beta_advanced.py  bitboard.py  config.py  constant.py  fanoronaTelo.py  gameNode.py  main.py  opening_book.py  pyproject.toml  requirements.txt  transposition_table.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/applications/hooks/: useFanoronaGame.ts
frontend/src/applications/utils/: checkFanorona.ts  fanoronaSuccessors.ts  index.ts  isPlacement.ts
frontend/src/domain/constants/: API.ts  FANORONA_ADJ.ts  O.ts  index.ts
frontend/src/domain/types/: GameType.ts  index.ts
frontend/src/infrastructure/: ApiPost.ts
frontend/src/presentation/: App.tsx
frontend/src/presentation/components/: GameStatusBar.tsx  ThinkingOverlay.tsx
frontend/src/presentation/components/ui/: ResetBtn.tsx  UndoRedoBtn.tsx
frontend/src/presentation/page/: FanoronaGame.tsx  GameSetup.tsx
frontend/src/presentation/styles/: index.css
