[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fanorona-telo-games"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.5",
    "uvicorn==0.30.6",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]